# hivemind

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  devenv.nix  js.conf
cli/: Cargo.toml
cli/migrations/: 20250306075416_create-task-table.up.sql
cli/src/: avro.rs  process.rs
cli/src/commands/: asset.rs  task.rs
cli/src/models/: mod.rs
cli/src/models/tags/: db.rs  mod.rs
cli/src/models/tasks/: model.rs
migrations/: 20250224014304_create_task_table.sql  20250306075650_create-asset-table.down.sql  20250306075650_create-asset-table.up.sql  20250307042242_create-tag-table.up.sql
server/: package.json  pnpm-lock.yaml
server/src/: index.ts  schema.ts
server/src/routes/: tasks.ts
src/: db.rs  lib.rs  main.old.rs  main.rs  nats.rs  tasks.rs
src/assets/: db.rs  mod.rs  model.rs
src/commands/: asset.rs  mod.rs  tag.rs  task.rs
src/models/: mod.rs
src/models/assets/: mod.rs
src/models/tags/: model.rs
src/models/tasks/: db.rs  mod.rs  model.rs
src/tasks/: db.rs  mod.rs  model.rs
