[package]
name = "hivemind"
description = "productivity tool for those who need it the most"
version = "0.1.0"
edition = "2024"
authors = ["Marla Albuquerque <marla@albuque.com>"]

[dependencies]
anyhow = "1.0.96"
apache-avro = "0.17.0"
async-nats = "0.39.0"
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.30", features = ["cargo"] }
futures = "0.3.31"
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
uuid = { version = "1.14.0", features = ["v4"] }
