[package]
name = "hvmd"
description = "productivity tool for those who need it the most"
version = "0.1.0"
edition = "2024"
authors = ["Marla Albuquerque <marla@albuque.com>"]

[dependencies]
seahorse = "2.2"
anyhow = "1.0.96"
apache-avro = "0.17.0"
async-nats = { version = "0.39.0", features = ["service"] }
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
serde = "1.0.218"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "time",
] }
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "debug-print",
  "macros",
  "with-uuid",
  "with-chrono",
] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
uuid = { version = "1.14.0", features = ["v4"] }
itertools = "*"
